DuPont DevSB/src/objects/Account_Product__c.object
<CustomObject>
    <description>Products related to an account (e.g. products they are buying, products they are interested in)
May also be related to Materials (secure products).</description>
    <fields>
        <fullName>Account_Product_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product or Material for this Account</description>
        <inlineHelpText>Name of Account Product Material</inlineHelpText>
        <label>Account-Product Material</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Material__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ERP Material – General Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Account-Products (Material)</relationshipLabel>
        <relationshipName>R00N30000002Uh6sEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Name of the account this product is related to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application_Comment__c</fullName>
        <description>Specific comments about the application of this product at this Account</description>
        <inlineHelpText>Specific comments about the application of this product at this Account</inlineHelpText>
        <label>Application Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main Competition for this Product at this account</description>
        <inlineHelpText>Main Competition for this Product at this account</inlineHelpText>
        <label>Competition</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Account-Products</relationshipLabel>
        <relationshipName>R00N30000001tZ9uEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DuPont_of_Revenue_Potential__c</fullName>
        <formula>Revenue_PYR__c   /   Total_Revenue_Potential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DuPont % of Revenue Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ERP_Ship_Point_Code__c</fullName>
        <description>ERP Ship-Point Code = Identifier of physical location (for example, a warehouse or collection of loading ramps) in ERP System (i.e. SAP) from which an item is shipped.</description>
        <label>ERP Ship-Point Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Site_Code__c</fullName>
        <description>Site Code = 4 digit identifier for a Plant Site in SAP. In the Account-Product, this field identifies a location where material is purchased for or stored at. (Note: Site Code or Plant is used in SAP to denote a location where material is produced at, purchased for, shipped from or stored at.)</description>
        <label>ERP Site Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Use__c</fullName>
        <description>End Use this Product is used in at this customer</description>
        <label>End Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>516 Furn &amp; Bedding</fullName>
                </value>
                <value>
                    <fullName>517 TYPAR PACKAGING</fullName>
                </value>
                <value>
                    <fullName>546 Carpet Backing</fullName>
                </value>
                <value>
                    <fullName>602 Screen Printer</fullName>
                </value>
                <value>
                    <fullName>60A Mailing Envelope</fullName>
                </value>
                <value>
                    <fullName>60C EMP/FLOPPY</fullName>
                </value>
                <value>
                    <fullName>60D Env/POSTAL</fullName>
                </value>
                <value>
                    <fullName>619 Other Small Pkg</fullName>
                </value>
                <value>
                    <fullName>627 Sterile Pkg</fullName>
                </value>
                <value>
                    <fullName>64B COATING/PS</fullName>
                </value>
                <value>
                    <fullName>64C Roll Converter</fullName>
                </value>
                <value>
                    <fullName>64D ShtConv/pr mrcht</fullName>
                </value>
                <value>
                    <fullName>64J Banner Conv/Prt</fullName>
                </value>
                <value>
                    <fullName>64L REINFORCING TAPE</fullName>
                </value>
                <value>
                    <fullName>663 INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>668 CAR COVERS</fullName>
                </value>
                <value>
                    <fullName>Agricultural services</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Apparel Roll Goods</fullName>
                </value>
                <value>
                    <fullName>Asbestos Removal</fullName>
                </value>
                <value>
                    <fullName>Bodyshop</fullName>
                </value>
                <value>
                    <fullName>Chemical Handling</fullName>
                </value>
                <value>
                    <fullName>Cleanroom</fullName>
                </value>
                <value>
                    <fullName>Cleanroom-Roll Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Apparel</fullName>
                </value>
                <value>
                    <fullName>Contaminated land clean up</fullName>
                </value>
                <value>
                    <fullName>Contaminated plant / building clean up</fullName>
                </value>
                <value>
                    <fullName>Controlled Environment</fullName>
                </value>
                <value>
                    <fullName>Disease management</fullName>
                </value>
                <value>
                    <fullName>Emergency Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <description>Free text descriptions of this product at this account</description>
        <label>Line Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>List price offered by DuPont to the distributor</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Level_3__c</fullName>
        <description>Formula pulls Product Level 3 from Material object</description>
        <formula>Account_Product_Material__r.ERP_Product_Hierarchy_Level_3__c</formula>
        <label>Material Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Level_4__c</fullName>
        <description>Formula field to pull Product Level 4 from Material Object</description>
        <formula>Account_Product_Material__r.ERP_Product_Hierarchy_Level_4__c</formula>
        <label>Material Level 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Level_5__c</fullName>
        <formula>Account_Product_Material__r.ERP_Product_Hierarchy_Level_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Level 5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-ES</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>DPT-PM</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-MIL</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Revenue_CY__c</fullName>
        <description>This is the planned commitment for revenue - current year</description>
        <label>PO Revenue CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Volume_CY__c</fullName>
        <description>The projected Volume of the current year for this account.</description>
        <label>PO Volume CY</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related to this account</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account-Products</relationshipLabel>
        <relationshipName>R00N30000001UcSHEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Product Category</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activator</fullName>
                </value>
                <value>
                    <fullName>Clear Coat</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Stage__c</fullName>
        <description>Stage this Product is in at this Customer</description>
        <label>Product Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Pre-booking</fullName>
                </value>
                <value>
                    <fullName>Requesting</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Buying</fullName>
                </value>
                <value>
                    <fullName>Using</fullName>
                </value>
                <value>
                    <fullName>Recommending</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty_Outlook_CY__c</fullName>
        <description>This is the volume (sales Qty) outlook based on current buying patterns</description>
        <label>Qty Outlook CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Products (Related Account)</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_CM__c</fullName>
        <description>Revenue Current Month</description>
        <inlineHelpText>Revenue Current Month</inlineHelpText>
        <label>Revenue CM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_CYTD__c</fullName>
        <description>Revenue Current Year-To-Date (as of Sales History Updated date on Account)</description>
        <inlineHelpText>Last refreshed as of  &lt;Sales History Updated&gt; date on Account</inlineHelpText>
        <label>Revenue CYTD</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_CYTD_vs_PYTD__c</fullName>
        <formula>(Revenue_CYTD__c - Revenue_PYTD__c) / Revenue_PYTD__c</formula>
        <label>Revenue CYTD vs PYTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Outlook_CY__c</fullName>
        <description>This is the revenue outlook based on current buying patterns</description>
        <label>Revenue Outlook CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_PYR__c</fullName>
        <description>Total revenue for prior year for this product at this account</description>
        <inlineHelpText>Prior Year Revenue for this product at this account</inlineHelpText>
        <label>Revenue PYR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_PYTD__c</fullName>
        <description>Prior Year-To-Date Revenue for this product at this account</description>
        <label>Revenue PYTD</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_PY_1__c</fullName>
        <description>Total Revenue - Previous Year - Minus 1 (Previous, Previous Year)</description>
        <inlineHelpText>Total Revenue - Previous Year - Minus 1 (Previous, Previous Year)</inlineHelpText>
        <label>Revenue PY-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Qty_CM__c</fullName>
        <description>Total volume Sales quantity - current month</description>
        <inlineHelpText>Total volume Sales quantity - current month</inlineHelpText>
        <label>Sales Qty CM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_of_Product_Category__c</fullName>
        <description>Percentage of share of this product in the total purchases of this customer in this Product Category</description>
        <label>Share of Product Category</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Potential__c</fullName>
        <description>The total revenue combined of product purchased from DuPont as well as Competitors, in other words, the total revenue for this customer)</description>
        <inlineHelpText>The total revenue combined of product purchased from DuPont as well as Competitors, in other words, the total revenue for this customer)</inlineHelpText>
        <label>Total Revenue Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <inlineHelpText>This is the total annual sales of the related Account</inlineHelpText>
        <label>Total Sales</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure__c</fullName>
        <description>Unit Of Measure applied to quantities in this record</description>
        <inlineHelpText>Unit Of Measure applied to quantities in this record</inlineHelpText>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>150MK</fullName>
                </value>
                <value>
                    <fullName>50LBS</fullName>
                </value>
                <value>
                    <fullName>60MK</fullName>
                </value>
                <value>
                    <fullName>72MK</fullName>
                </value>
                <value>
                    <fullName>80MK</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Cubic meter</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>each</fullName>
                </value>
                <value>
                    <fullName>Gallon UK</fullName>
                </value>
                <value>
                    <fullName>Gallon US</fullName>
                </value>
                <value>
                    <fullName>Gram</fullName>
                </value>
                <value>
                    <fullName>Hectare</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Jumbo</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Milliliter</fullName>
                </value>
                <value>
                    <fullName>Ounce</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Square foot</fullName>
                </value>
                <value>
                    <fullName>Square meter</fullName>
                </value>
                <value>
                    <fullName>Tests/Yr</fullName>
                </value>
                <value>
                    <fullName>Ton, metric</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs_fAgreement_Brand__c</fullName>
        <description>formula field to address trademark for docusign

(11/6/2017) - Removed Agreement_Brand__c reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Brand (dsfs)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs_fBrand__c</fullName>
        <description>formula field to address trademark for docusign

(11/6/2017) - Removed &quot;Brand__c&quot; reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand (dsfs)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Total_Sales__c</fullName>
        <formula>Total_Sales__c  * Share_of_Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Total Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Account-Product</label>
    <nameField>
        <displayFormat>ACPR{YY}{MM}-{0000}</displayFormat>
        <label>Account-Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account-Products</pluralLabel>
    <recordTypes>
        <fullName>BI_Account_Product</fullName>
        <active>true</active>
        <label>BI Account Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPTIPP</fullName>
        <active>true</active>
        <description>DPT - DPP-NA account Product</description>
        <label>DPT-IPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_AP_Sales_Capture</fullName>
        <active>true</active>
        <description>DPT AP Account Product for Sales Capture</description>
        <label>DPT-AP Sales Capture</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_IPPEMEA</fullName>
        <active>true</active>
        <description>DPT - DuPont Personal Protection EMEA Account Products</description>
        <label>DPT-IPP EMEA</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_NOW</fullName>
        <active>true</active>
        <description>DPT - Based on DPP Record Type</description>
        <label>DPT-NOW</label>
    </recordTypes>
    <recordTypes>
        <fullName>IB</fullName>
        <active>false</active>
        <description>Based on DPP Record Type</description>
        <label>IB</label>
    </recordTypes>
    <recordTypes>
        <fullName>OneDuPont</fullName>
        <active>true</active>
        <description>OneDuPont Account Products</description>
        <label>OneDuPont</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>